syntax = "proto3";
option java_multiple_files = true;
option java_package = "cz.cvut.fel";


service NodeService{
    rpc join(JoinRequest) returns (JoinResponse);
    rpc sendMessage(DirectMessage) returns (Empty);      // 1 vyzaduje stream, 2 vraci stream, pak skrz streamy posilam zpravy
    rpc updateConnection(UpdateNeighbourMsg) returns (Empty);   // Specialni zprava pro zpetecne spojeni
    rpc broadcastMessage(BroadcastMessage) returns (Empty);
    rpc logOut(LogOutRequest) returns (Empty);

    rpc ping(Empty) returns (Empty);
    rpc connectionLost(BrokenTopology) returns (Empty);
}

service ElectionService{
    rpc sendPID(AddressMsg) returns (Empty);
    rpc tossCall(AddressPair) returns (Empty);
}

service TerminationService{
    rpc detectTermination(Token) returns (Empty);
}

message AddressMsg {
    string ip_address = 1;
    int32 port = 2;
}

message JoinRequest {
    string name = 1;
    AddressMsg address = 2;
}

message DirectMessage {
    string author = 1;
    string message = 2;
    string recipient = 3;
    bool received = 4;
    int32 hopCount = 5;
}

message BroadcastMessage {
    string author = 1;
    string message = 2;
    int32 hopCount = 3;
}

message Empty {}

message JoinResponse {
    AddressMsg next = 1;
    AddressMsg prev = 2;
}

message LogOutRequest {
    AddressMsg ownAddress = 1;
    AddressMsg newNeighbour = 2;
}

message AddressPair {
    AddressMsg ntid = 1;
    AddressMsg nntid = 2;
}

message Token {
    bool isBlack = 1;
}

message BrokenTopology {
    AddressMsg brokenNode = 1;
    bool isPrevBroken = 2;
}

message UpdateNeighbourMsg {
    AddressMsg address = 1;
    bool isPrev = 2;
}

